# agent-digester

./: .gitignore  README.md  pyproject.toml
agent_digester/: __init__.py
agent_digester/agents/: anchor_finder.py  base.py  chief_editor.py  cognitive_gap.py  difficulty_assessor.py  narrative_optimizer.py  six_layer_restructurer.py  topic_scout.py  truth_guardian.py  verification.py
agent_digester/assets/: __init__.py
agent_digester/assets/analogy_bank/: patterns.py
agent_digester/core/: laws.py  output.py
agent_digester/models/: profile.py
agent_digester/pipeline/: orchestrator.py
agent_digester/skills/: driver.py  extractor.py  tree.py
blind_eval/: comparison_table.md  raw_data.json  run_eval.py
